<resources>
    <string name="app_name" translatable="false">CalculMind</string>
    <string name="buttonHighScore"> Historique </string>
    <string name="buttonStart"> Démarer </string>
    <string name="bouton_dot" translatable="false"> . </string>
    <string name="bouton_del"> Supp </string>
    <string name="bouton_entry"> Entrée </string>
    <string name="bouton_0" translatable="false">0</string>
    <string name="bouton_1" translatable="false">1</string>
    <string name="bouton_2" translatable="false">2</string>
    <string name="bouton_3" translatable="false">3</string>
    <string name="bouton_4" translatable="false">4</string>
    <string name="bouton_5" translatable="false">5</string>
    <string name="bouton_6" translatable="false">6</string>
    <string name="bouton_7" translatable="false">7</string>
    <string name="bouton_8" translatable="false">8</string>
    <string name="bouton_9" translatable="false">9</string>
    <string name="toolbar_abandon"> Abandonner </string>
    <string name="toolbar_score" translatable="false"> 0 </string>
    <string name="bouton_retour_accueil"> Retour Accueil</string>
    <string name="bouton_popup_valider"> Valider </string>
    <string name="bouton_popup_annuler"> Annuler </string>
    <string name="bouton_popup_titre"> Perdu ! </string>
    <string name="text_popup_message"> Votre score est de : </string>
    <string name="text_popup_message2"> points </string>
    <string name="bouton_popup_pseudo"> Entrez votre pseudo </string>
    <string name="bouton_highscore_showmore"> Montrer plus </string>
    <string name="bouton_about"> A propos </string>
</resources>