<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".HighScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_popup_titre"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@id/TextPersonName"
            app:layout_constraintStart_toStartOf="@id/TextPersonName"
            tools:layout_editor_absoluteY="266dp" />

        <EditText
            android:id="@+id/TextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bouton_popup_pseudo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonScore_valider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouton_popup_valider" />

            <Button
                android:id="@+id/buttonScore_annuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/white"
                android:text="@string/bouton_popup_annuler"
                android:textColor="@color/fond_app" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>



